# libhybris

hybris/: Makefile.am  configure.ac
hybris/common/: Makefile.am
hybris/common/kk/: Makefile.am  dlfcn.cpp  lollipop.txt
hybris/tests/: Makefile.am
